Bug fix: in responsive divs overlap others

--- a/src/styles/banner.css
+++ b/src/styles/banner.css
@@ -19,18 +19,6 @@
   margin: 0px auto;
 }
 
-@keyframes rotate {
-  0% {
-    transform: rotate(0);
-  }
-  100% {
-    transform: translate(30px, 20px) rotate(20deg);
-  }
-  0% {
-    transform: rotate(0);
-  }
-}
-
 #bannerText {
   color: #dcdcdc;
   font-weight: bold;
@@ -39,16 +27,6 @@
 }
 
 @media screen and (max-width: 1100px) {
-  #bannerText {
-    font-size: 26px;
-  }
-
-  #banner {
-    padding: 0px;
-  }
-}
-
-@media screen and (max-width: 430px) {
   #bannerText {
     font-size: 16px;
   }
@@ -60,15 +38,5 @@
   }
   #banner {
     height: 100px ;
-  }
-}
-
-@media screen and (max-width: 322px) {
-  #bannerText {
-    font-size: 16px;
-  }
-
-  #banner {
-    padding: 0px;
   }
 }
